syntax = "proto3";
package chain;

import "github.com/aperturerobotics/storageref/storageref.proto";

// Config is the configuration for a chain.
message Config {
  // GenesisRef is a reference to the genesis block.
  storageref.StorageRef genesis_ref = 1;
}