syntax = "proto3";
package chain;

import "github.com/aperturerobotics/inca/inca.proto";

// ProposerState is state for a proposer.
message ProposerState {
}